Edit arrow images, correct button styles & add flex alignment in Works section

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,9 @@ nav {
 
 hr {
   width: 85%;
-  margin: 10px auto 10px auto;
+  margin: 2px auto 2px auto;
   padding: 0;
-  border-bottom: solid 2px #dfe1e6;
+  border-bottom: solid 1px #dfe1e6;
 }
 
 .poppins {
@@ -127,6 +127,8 @@ hr {
   border-radius: 16px;
   margin-top: 30px;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 .desc2 {
@@ -198,20 +200,29 @@ hr {
 
 .see-project {
   font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #fff;
   color: #396df2;
   border: solid 1px #396df2;
-  padding: 8px;
+  padding: 12px;
   border-radius: 4px;
   margin-left: 5%;
   margin-right: auto;
 }
 
 .see-project:hover {
-  background-color: #396df2;
-  color: #fff;
   font-size: 17px;
-  border: solid 1px #396df2;
-  padding: 8px;
+  line-height: 24px;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #6070ff;
+  color: #fff;
+  border: solid 1px #fff;
+  padding: 12px;
   border-radius: 4px;
   margin-left: 5%;
   margin-right: auto;
@@ -229,6 +240,8 @@ hr {
   width: 90%;
   color: #172b4d;
   font-size: 40px;
+  font-weight: 700;
+  line-height: 52px;
   margin-left: 24px;
 }
 
@@ -237,10 +250,40 @@ hr {
   margin: 0 20px 20px 24px;
 }
 
+.my-resume {
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #fff;
+  color: #396df2;
+  border: solid 1px #396df2;
+  padding: 12px;
+  border-radius: 4px;
+  margin-left: 5%;
+  margin-right: auto;
+}
+
+.my-resume:hover {
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #6070ff;
+  color: #fff;
+  border: solid 1px #fff;
+  padding: 12px;
+  border-radius: 4px;
+  margin-left: 5%;
+  margin-right: auto;
+}
+
 .languages {
   display: flex;
   justify-content: space-between;
-  margin: 30px auto 15px 26px;
+  margin: 15px auto 15px 26px;
   width: 80%;
 }
 
@@ -248,7 +291,7 @@ hr {
 .skills {
   display: flex;
   justify-content: space-between;
-  margin: 30px auto 30px 26px;
+  margin: 15px auto 30px 26px;
   width: 80%;
 }
 
@@ -262,27 +305,51 @@ hr {
 .row1 {
   width: 100%;
   display: flex;
-  margin-bottom: 10px;
+  padding-top: 4px;
+  padding-bottom: 3px;
   background-color: #f7f7f9;
+}
+
+.li-sp {
+  margin-bottom: 12px;
+}
+
+.arrow-down {
+  width: 14px;
+  height: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  /* background-color: #ffffff; */
+  vertical-align: middle;
+}
+
+.arrow-right {
+  width: 8px;
+  height: 14px;
+  padding-left: 8px;
+  padding-right: 8px;
+  /* background-color: #ffffff; */
+  vertical-align: middle;
 }
 
 .lang,
 .frame,
 .skill {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
+  line-height: 24px;
 }
 
 .js,
 .html5,
 .css3 {
-  font-size: 20px;
+  font-size: 15px;
   color: #253858;
   font-weight: 500;
-  padding-top: 18px;
+  line-height: 20px;
+  padding-top: 16px;
   padding-bottom: 5px;
   padding-left: 15px;
-
   /* padding-right: 15px; */
   width: 70%;
   vertical-align: middle;
@@ -291,9 +358,9 @@ hr {
 .js-img,
 .html5-img,
 .css3-img {
-  width: 20%;
+  width: 17%;
   height: auto;
-  padding: 5px;
+  padding: 4px;
 }
 
 .resume-text {
